fix: fix body not wrapping all content vertically in chrome

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -29,7 +29,6 @@ $dark-secondary: #f29ea6;
 
 html,
 body {
-  height: 100%;
   min-height: 100%;
   margin: 0;
   padding: 0;
